# dictator

./: .gitignore  CLAUDE.md  DESIGN_ANALYSIS.md  README.md  TODO.md  pyproject.toml  pytest.ini
app/: main.py
test/assets/: 2025-10-14-10-51.m4a  2025-10-14-10-51.txt  2025-12-01-07-29.m4a  2025-12-01-07-29.txt  2025-12-01-07-30.m4a  2025-12-01-07-30.txt  2025-12-01-07-34.m4a  2025-12-01-07-34.txt  2025-12-01-07-42.m4a  2025-12-01-07-42.txt
tests/: conftest.py  test_assets.py  test_audio_processing.py  test_cache.py  test_cli.py  test_compare_audio.py  test_edge_cases.py  test_integration.py  test_transcription_quality.py  test_worker.py
